fix alignment text and icons

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -5,14 +5,13 @@
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.4);
+  color: rgba(0,0,0,0.6);
 }
 .footerLinks{
   display: flex;
   align-items: center;
 
   a {
-    color: black;
     opacity: 0.4;
     text-decoration: none;
     font-size: 24px;
@@ -24,6 +23,11 @@
   }
 }
 .footerText{
+  font-family: Montserrat;
   display: flex;
   align-items: center;
+
+  p {
+    margin: 0;
+  }
 }
